--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,6 @@
-html {background-color: rgb(56, 52, 52); color: rgb(230, 229, 229);}
+html {background-color: rgb(56, 52, 52); color: rgb(230, 229, 229); margin-left: 30px;}
+
+p {width: 500px;}
+
+img {float: ;}
 
