--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,140 @@
-html {background-color: rgb(56, 52, 52); color: rgb(230, 229, 229); margin-left: 30px;}
+@keyframes animation {
+  0%   {background-color:red; left:0px; top:0px; transform: rotate(36deg);}
+  10%  {background-color:rgb(255, 115, 0); left:200px; top:0px; transform: rotate(72deg);}
+  20%  {background-color:rgb(255, 251, 37); left:200px; top:200px; transform: rotate(108deg);}
+  30%  {background-color:rgb(166, 255, 0); left:0px; top:200px; transform: rotate(144deg);}
+  40% {background-color:rgb(0, 255, 13); left:0px; top:0px; transform: rotate(180deg);}
+  50%   {background-color:rgb(7, 177, 70); left:0px; top:0px;transform: rotate(216deg);}
+  60%  {background-color:rgb(0, 217, 255); left:200px; top:0px; transform: rotate(248deg);}
+  70%  {background-color:blue; left:200px; top:200px; transform: rotate(264deg);}
+  80%  {background-color:rgb(200, 0, 255); left:0px; top:200px; transform: rotate(300deg);}
+  90% {background-color:rgb(131, 0, 85); left:0px; top:0px; transform: rotate(336deg);}
+  100% {background-color:rgb(31, 31, 31); left:0px; top:0px; transform: rotate(360deg);}
+}
 
-p {width: 500px;}
+@keyframes sixseven{
+  0%   {background-color:red;}
+  10%  {background-color:rgb(255, 115, 0); ;}
+  20%  {background-color:rgb(255, 251, 37); }
+  30%  {background-color:rgb(166, 255, 0); }
+  40% {background-color:rgb(0, 255, 13); }
+  50%   {background-color:rgb(7, 177, 70);}
+  60%  {background-color:rgb(0, 217, 255); }
+  70%  {background-color:blue; left:200px; }
+  80%  {background-color:rgb(200, 0, 255); }
+  90% {background-color:rgb(131, 0, 85); }
+  100% {background-color:rgb(31, 31, 31);}
+}
 
-img {float: ;}
+#SIGMA{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10; 
+  width: 200px;
+  height: 150px;
+
+}
+
+
+a:hover{
+    color:rgba(97, 247, 187, 0.851);
+    font-size: 1.1em;  
+}
+
+body {
+    background-color: rgb(56, 52, 52); 
+    color: rgb(230, 229, 229); 
+    margin-left: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+}
+#container{
+    width: 800px;
+    margin: 0px auto;
+    background-color: rgb(74, 69, 69);
+    padding: 40px;
+    border-left: black solid 4px;
+    border-right: black solid 4px;
+    animation-name: animation;
+    animation-duration: 1s;
+    position: relative;
+    animation-iteration-count: infinite;
+    animation-delay: -1s;
+
+}
+
+
+h1 {
+    background-color: rgba(0, 0, 0, 0.851);
+    border: white, 2px solid;
+    border-radius: 5px;
+    padding: 5px;
+    width: 30%;
+    text-align: center;
+    margin: 0px auto;
+    font-weight: 100;
+}
+
+h2 {
+    text-align: center;
+    font-size: 1.2em;
+    font-style: italic;
+}
+
+h3{
+    border-left: double 20px white;
+    border-radius: 30px;
+    padding-left: 15px
+    ;
+}
+
+p{
+    line-height: 2.2em;
+}
+
+img{
+    float: left;
+    width: 300px;
+    border: white solid 5px;
+    border-radius: 15px;
+    margin-right: 20px; 
+
+}
+
+a:link{
+    color:rgba(255, 167, 249, 0.851);
+    text-decoration: none;
+    font-weight: bold;
+}
+
+a:visited{
+    color:rgba(201, 42, 111, 0.851)
+}
+
+
+
+
+
+a:active{
+    color:rgba(247, 187, 97, 0.851);
+
+}
+
+
+#pic1{
+    width: 200px;
+    height: 300px;
+    margin-right: 20px; 
+} 
+
+
+.highlight{
+    font-weight:bold;
+    background-color: yellowgreen;
+}
+
+
+
 
