--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,18 @@
 @keyframes animation {
+    0%   { background-color: red; }
+    10%  { background-color: rgb(255, 115, 0); }
+    20%  { background-color: rgb(255, 251, 37); }
+    30%  { background-color: rgb(166, 255, 0); }
+    40%  { background-color: rgb(0, 255, 13); }
+    50%  { background-color: rgb(7, 177, 70); }
+    60%  { background-color: rgb(0, 217, 255); }
+    70%  { background-color: blue; }
+    80%  { background-color: rgb(200, 0, 255); }
+    90%  { background-color: rgb(131, 0, 85); }
+    100% { background-color: rgb(31, 31, 31); }
+}
+/* 
+@keyframes animation {
   0%   {background-color:red; left:0px; top:0px; transform: rotate(36deg);}
   10%  {background-color:rgb(255, 115, 0); left:200px; top:0px; transform: rotate(72deg);}
   20%  {background-color:rgb(255, 251, 37); left:200px; top:200px; transform: rotate(108deg);}
@@ -10,32 +24,9 @@
   80%  {background-color:rgb(200, 0, 255); left:0px; top:200px; transform: rotate(300deg);}
   90% {background-color:rgb(131, 0, 85); left:0px; top:0px; transform: rotate(336deg);}
   100% {background-color:rgb(31, 31, 31); left:0px; top:0px; transform: rotate(360deg);}
-}
+} */
 
-@keyframes sixseven{
-  0%   {background-color:red;}
-  10%  {background-color:rgb(255, 115, 0); ;}
-  20%  {background-color:rgb(255, 251, 37); }
-  30%  {background-color:rgb(166, 255, 0); }
-  40% {background-color:rgb(0, 255, 13); }
-  50%   {background-color:rgb(7, 177, 70);}
-  60%  {background-color:rgb(0, 217, 255); }
-  70%  {background-color:blue; left:200px; }
-  80%  {background-color:rgb(200, 0, 255); }
-  90% {background-color:rgb(131, 0, 85); }
-  100% {background-color:rgb(31, 31, 31);}
-}
 
-#SIGMA{
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 10; 
-  width: 200px;
-  height: 150px;
-
-}
 
 
 a:hover{
@@ -51,19 +42,23 @@ body {
     margin: 0;
 }
 #container{
-    width: 800px;
+    width: 1000px;
     margin: 0px auto;
     background-color: rgb(74, 69, 69);
     padding: 40px;
     border-left: black solid 4px;
     border-right: black solid 4px;
-    animation-name: animation;
+    
+}
+
+#container:active{animation-name: animation;
     animation-duration: 1s;
     position: relative;
     animation-iteration-count: infinite;
     animation-delay: -1s;
-
 }
+
+
 
 
 h1 {
@@ -84,7 +79,7 @@ h2 {
 }
 
 h3{
-    border-left: double 20px white;
+    
     border-radius: 30px;
     padding-left: 15px
     ;
@@ -98,7 +93,7 @@ img{
     float: left;
     width: 300px;
     border: white solid 5px;
-    border-radius: 15px;
+
     margin-right: 20px; 
 
 }
@@ -136,5 +131,68 @@ a:active{
 }
 
 
+#sidebar{
+    float: right;
+    width: 200px;
+    margin-left: 20px;
+    border: white solid 5px;
+    padding: 10px;
+    background-color: rgb(83, 72, 72);
+    margin-top: 25px;
+    margin-right: 20px;
+    line-height: 30px;
+    
+}
+
+.paragraph{
+    border: 10px solid rgb(37, 35, 35);
+    margin-top: 20px;
+    padding: 20px;
+    
+}
+
+@media (max-width:1200px){
+    #container{
+        background-color: bisque;
+        width: 800px;
+    }
+
+}
+
+@media (max-width:992px){
+    #container{
+        background-color: lightblue;
+        width: 100%;
+    }
+    #container, p{
+        margin: 0;
+        padding: 0;
+        border: none;
+    }
+    h1,h2,h3,body,p,body,div{
+        background-color: wheat;
+        border: none;
+    }
+    body{
+        padding:20px;
+    }
+    #sidebar h3{
+        color: blue;
+    }
+    p{
+        text-align: justify;
+    }
+}
+
+@media (max-width:768px){
+    #sidebar{
+        display: none; 
+    }
+    img,#pic1,#pic2{
+        float: none;
+        border: none; 
+        width: 100%;
+    }
+}
 
 
