--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@keyframes animation {
+/* @keyframes animation {
     0%   { background-color: red; }
     10%  { background-color: rgb(255, 115, 0); }
     20%  { background-color: rgb(255, 251, 37); }
@@ -10,44 +10,30 @@
     80%  { background-color: rgb(200, 0, 255); }
     90%  { background-color: rgb(131, 0, 85); }
     100% { background-color: rgb(31, 31, 31); }
+    /* w3schools */
+
+
+
+html{
+    font-family: sans-serif;
 }
-/* 
-@keyframes animation {
-  0%   {background-color:red; left:0px; top:0px; transform: rotate(36deg);}
-  10%  {background-color:rgb(255, 115, 0); left:200px; top:0px; transform: rotate(72deg);}
-  20%  {background-color:rgb(255, 251, 37); left:200px; top:200px; transform: rotate(108deg);}
-  30%  {background-color:rgb(166, 255, 0); left:0px; top:200px; transform: rotate(144deg);}
-  40% {background-color:rgb(0, 255, 13); left:0px; top:0px; transform: rotate(180deg);}
-  50%   {background-color:rgb(7, 177, 70); left:0px; top:0px;transform: rotate(216deg);}
-  60%  {background-color:rgb(0, 217, 255); left:200px; top:0px; transform: rotate(248deg);}
-  70%  {background-color:blue; left:200px; top:200px; transform: rotate(264deg);}
-  80%  {background-color:rgb(200, 0, 255); left:0px; top:200px; transform: rotate(300deg);}
-  90% {background-color:rgb(131, 0, 85); left:0px; top:0px; transform: rotate(336deg);}
-  100% {background-color:rgb(31, 31, 31); left:0px; top:0px; transform: rotate(360deg);}
-} */
 
 
-
-
-a:hover{
-    color:rgba(97, 247, 187, 0.851);
-    font-size: 1.1em;  
-}
 
 body {
-    background-color: rgb(56, 52, 52); 
-    color: rgb(230, 229, 229); 
+    background-color:beige; 
+
     margin-left: 30px;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
 }
 #container{
-    width: 1000px;
+    width: 950px;
     margin: 0px auto;
-    background-color: rgb(74, 69, 69);
+    background-color: rgb(216, 200, 200);
     padding: 40px;
-    border-left: black solid 4px;
-    border-right: black solid 4px;
+    border-left: rgb(189, 189, 154) solid 4px;
+    border-right: rgb(189, 189, 154) solid 4px;
     
 }
 
@@ -62,7 +48,7 @@ body {
 
 
 h1 {
-    background-color: rgba(0, 0, 0, 0.851);
+    background-color: rgba(151, 55, 55, 0.851);
     border: white, 2px solid;
     border-radius: 5px;
     padding: 5px;
@@ -72,10 +58,18 @@ h1 {
     font-weight: 100;
 }
 
+h1:hover{
+    transform: scale(1.05);
+    transition: all 0.2s ease-in-out;
+    box-shadow: 5px 5px 15px gray;
+}
+
 h2 {
     text-align: center;
     font-size: 1.2em;
     font-style: italic;
+    text-shadow: 2px 2px 5px gray;
+    color: rgb(244, 244, 244);
 }
 
 h3{
@@ -93,19 +87,20 @@ img{
     float: left;
     width: 300px;
     border: white solid 5px;
-
+    box-shadow: 2px 2px 4px gray;
     margin-right: 20px; 
 
 }
 
 a:link{
-    color:rgba(255, 167, 249, 0.851);
-    text-decoration: none;
+    color:rgba(104, 185, 255, 0.851);
+    text-decoration: underline;
     font-weight: bold;
 }
 
 a:visited{
-    color:rgba(201, 42, 111, 0.851)
+    color:rgba(255, 79, 223, 0.851);
+    text-decoration: underline;
 }
 
 
@@ -125,9 +120,22 @@ a:active{
 } 
 
 
+
+
 .highlight{
+    color: rgb(71, 71, 71);
+
+    font-size: 20px;
     font-weight:bold;
-    background-color: yellowgreen;
+    background-color: rgb(222, 198, 198);
+   
+    width: 200px;
+    box-shadow: 3px 3px 5px gray;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-shadow: 2px 2px 5px gray;
 }
 
 
@@ -135,21 +143,40 @@ a:active{
     float: right;
     width: 200px;
     margin-left: 20px;
-    border: white solid 5px;
-    padding: 10px;
-    background-color: rgb(83, 72, 72);
-    margin-top: 25px;
-    margin-right: 20px;
+    border: white solid 3.5px;
+    padding: 2px;
+    background-color: rgb(211, 128, 160);
+    margin-top: 7px;
+    margin-right: 10px;
     line-height: 30px;
+    
     
 }
 
-.paragraph{
-    border: 10px solid rgb(37, 35, 35);
-    margin-top: 20px;
-    padding: 20px;
-    
+#sidebar:hover{
+    box-shadow: 5px 5px 15px gray;
+    transform: scale(1.02);
+    transition: all 0.3s ease-in-out;
 }
+
+.paragraph{
+    border: 5px solid white;
+    margin-top: 20px;
+    padding: 20px;  
+    box-shadow: 3px 3px 10px gray;
+}
+
+.paragraph:hover{
+    box-shadow: 10px 10px 25px gray;
+    transform: scale(1.02);
+    transition: all 0.3s ease-in-out;
+}
+
+
+
+
+
+
 
 @media (max-width:1200px){
     #container{
@@ -194,5 +221,55 @@ a:active{
         width: 100%;
     }
 }
+
+img:hover{
+    transform: scale(1.05);
+    transition: all 0.2s ease-in-out;
+    box-shadow: 5px 5px 15px gray;
+    
+}
+
+
+
+
+
+@keyframes Animation {
+  0%   {color:red;transform:rotate(0deg);}
+  25%  {color:yellow;transform:rotate(10deg);}
+  50%  {color:green;transform:rotate(10deg);}
+  75%  {color:blue; transform:rotate(-10deg);}
+  100% {color:purple;transform:rotate(-10deg);}
+}
+
+a{
+    display:inline-block;
+    transform-origin: center;
+}
+
+a:hover{
+    animation: Animation 0.3s infinite;
+    animation-delay: 0s;
+    
+}
+
+html:hover{
+    cursor:wait;
+    
+}
+
+#button{
+    background-color: rgb(234, 172, 172);
+    padding: 10px;
+    border-color: rgb(189, 189, 154);
+    border-width: 3px;
+ 
+}
+
+
+#video{
+
+}
+
+
 
 
