--- a/styles.css
+++ b/styles.css
@@ -183,6 +183,7 @@ a:active{
     #container{
         
         width: 800px;
+        background-color: rgb(255, 250, 152);
     }
 
 }
@@ -191,6 +192,7 @@ a:active{
     #container{
         
         width: 100%;
+        background-color: rgb(205, 243, 197);
     }
     #container, p{
         margin: 0;
@@ -199,7 +201,9 @@ a:active{
     }
     
     body{
-        padding:20px;
+        padding-right: 20px;
+        padding-left: 20px;
+       
     }
     #sidebar h3{
         
